fix noisy tests